<resources>
    <string name="app_name">Grid Image Search</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">enter search query</string>
    <string name="search_btn">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="setup_title">Advanced search options</string>
    <string name="setup_image_size">Image Size</string>
    <string name="setup_color_filter">Color Filter</string>
    <string name="setup_image_type">Image Type</string>
    <string name="setup_site_filter">Site Filter</string>
    <string name="setup_btn_submit">Save</string>
    <string name="setup_site_hits">Enter Site Name</string>
</resources>
